--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,16 @@
         <artifactId>aws-java-sdk-s3</artifactId>
         <version>1.12.610</version>
     </dependency>
+    <dependency>
+	    <groupId>org.springframework.retry</groupId>
+	    <artifactId>spring-retry</artifactId>
+	     <version>1.2.5.RELEASE</version>
+	</dependency>
+	<dependency>
+   		<groupId>org.springframework</groupId>
+   		<artifactId>spring-aspects</artifactId>
+   		<version>5.2.8.RELEASE</version>
+	</dependency>
     </dependencies>
 
     <!-- 빌드 설정 -->
